Fix for <pre>'s that randomly end up in posts. They'll word-wrap now.

--- a/myewb/media/css/myewb2-posts.css
+++ b/myewb/media/css/myewb2-posts.css
@@ -79,6 +79,11 @@ div.shortpost .postheaderlink, div.shortpost .postheaderlink:visited
 	padding:10px;
 }
 
+.post div.postcontent pre {
+white-space: normal;
+}
+
+
 #maincolumn div.postcontent p.postbody
 {
 	padding-right: 4px;
